Setup option parsing

--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "ncli",
   "description": "A collection of helpful scripts I use regularly.",
   "author": "Jason Cox <jasonwilburcox@gmail.com>",
-  "repository": "http://www.github.com/jasocox/ncli",
+  "repository": {
+    "type": "git",
+     "url": "http://www.github.com/jasocox/ncli"
+   },
   "dependencies": {
-    "celery": "0.0.x"
+    "stdio": "0.1.x"
   }
 }
