--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
      "url": "http://www.github.com/jasocox/ncli"
    },
   "dependencies": {
-    "stdio": "0.1.x"
+    "stdio": "0.1.x",
+    "jsonfile": "1.1.x"
   }
 }
