Can now update a branch

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
    },
   "dependencies": {
     "stdio": "0.1.x",
-    "jsonfile": "1.1.x"
+    "jsonfile": "1.1.x",
+    "execSync": "1.0.x"
   }
 }
