--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "stdio": "0.1.x",
     "jsonfile": "1.1.x",
     "execSync": "1.0.x",
-    "underscore": "1.5.x"
+    "underscore": "1.5.x",
+    "colors": "0.6.x"
   }
 }
