--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jsonfile": "1.1.x",
     "execSync": "1.0.x",
     "underscore": "1.5.x",
-    "colors": "0.6.x"
+    "colors": "0.6.x",
+    "nodeunit": "0.8.x"
   }
 }
